[package]
name = "Blstmomonitor"
version = "4.1.0"
authors = ["Blstmo Company LLC <info@Blstmo-company.com>"]
description = "Simple server monitor"
edition = "2021"
repository = "https://github.com/Blstmo-Company/BlstmoMonitor2"
license = "GPL-3.0"
readme = "README.md"
rust-version = "1.68.2"
categories = ["command-line-utilities"]
keywords = ["cli", "process-monitoring"]
publish = ["Blstmomonitor"]

[dependencies]
axum = "0.6.16"
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.4", features = ["derive"] }
sysinfo = "0.28.4"
